welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:7: error: type mismatch;
 found   : Unit
 required: Int
		if(tea>=5 && candy>=5)
                ^